--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "reactstrap-sidebare",
   "version": "0.1.0",
-  "description": "A Simple SideBar Navigation written in React",
-  "author": "Boukrouh Bilal",
+  "description": "Layout Dashboard",
+  "author": "Sangtu Yoga",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "react": "^16.8.6",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
